--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
 
         </activity>
 
+        <activity android:name=".ChatActivity">
+
+        </activity>
+
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
